[package]
name = "crabber_app"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
workspace = "../.."
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
crabber_protocol = { path = "../protocol" }
bevy = "0.10.0"
bevy_asset_loader = { version = "0.15.0", features = [ "2d" ] }
bevy_ecs_tilemap = { version = "0.10", features = [ "atlas" ] }
leafwing-input-manager = "0.9"
naia-bevy-client = { version = "0.20", features = ["transport_webrtc"]  }
rand = "0.8"

[dev-dependencies]
common_e2e = { path = "../../lib/common-e2e" }
bevy_prototype_lyon = "*"

[[test]]
name = "e2e-full-client"
path = "e2e/full-client.rs"
harness = false

[[test]]
name = "e2e-crab-sprite"
path = "e2e/crab-sprite.rs"
harness = false

[[test]]
name = "e2e-full-game"
path = "e2e/full-game.rs"
harness = false

[[test]]
name = "e2e-inputs"
path = "e2e/inputs.rs"
harness = false

[[test]]
name = "e2e-tilemap"
path = "e2e/tilemap.rs"
harness = false

[[test]]
name = "e2e-local-multi"
path = "e2e/local-multi.rs"
harness = false

[[test]]
name = "e2e-motors"
path = "e2e/motors.rs"
harness = false

[[test]]
name = "e2e-spawn-level"
path = "e2e/spawn-level.rs"
harness = false
