[package]
name = "crabber_app"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
workspace = "../.."
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
crabber_controller = { path = "../controller" }
crabber_core = { path = "../core" }
crabber_graphics = { path = "../graphics" }
crabber_protocol = { path = "../protocol" }
bevy = "0.10.0"
naia-bevy-client = { version = "0.20", features = ["transport_webrtc"]  }
rand = "0.8"

[dev-dependencies]
common_e2e = { path = "../../lib/common-e2e" }

[[test]]
name = "e2e-full-client"
path = "e2e/full-client.rs"
harness = false
