[package]
name = "crabber_controller"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
workspace = "../.."
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
crabber_protocol = { path = "../protocol" }
crabber_core = { path = "../core" }
bevy_app = { version = "0.10", default-features=false }
bevy_ecs = { version = "0.10", default-features=false }
bevy_input = { version = "0.10", default-features=false }
leafwing-input-manager = "0.9"
