[package]
name = "crabber_protocol"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
workspace = "../.."
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bevy_app = { version = "0.10", default-features=false }
bevy_ecs = { version = "0.10", default-features=false }
bevy_math = { version = "0.10", default-features=false }
naia-bevy-shared = { version = "0.20" }
rand = { version = "0.8" }
